# stateless-anchor

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/anchor/: Cargo.toml
crates/anchor/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/input-http/: Cargo.toml
crates/input-http/src/: lib.rs
crates/output-iceberg/: Cargo.toml
crates/output-iceberg/src/: lib.rs
test/client/: create_table.sql  generate.py  run.sh
test/query-engine/: README.md  run.sh
test/query-engine/etc/: jvm.config
test/query-engine/etc/catalog/: cloudflare.properties.sample
test/server/: config.yaml.sample  run.sh
