[package]
name = "anchor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "anchor"
path = "src/main.rs"

[dependencies]
anchor-config.workspace = true
anchor-core.workspace = true
anchor-input-http.workspace = true
anchor-output-iceberg.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
