[package]
name = "anchor-output-iceberg"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anchor-config.workspace = true
anchor-core.workspace = true
arrow-array.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
async-trait.workspace = true
bytes.workspace = true
iceberg.workspace = true
iceberg-catalog-rest.workspace = true
iceberg-storage-opendal.workspace = true
parquet.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
